SERVER-2119 expose the number of known slaves